# ticker_api

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: get_data.py  sync_historical_equity_data.py  sync_historical_fno_dates.py  sync_instruments.py
examples/sync_historical_data/: all_data.py  fno_dates.py  futures_data.py
migrations/: env.py
ticker_api/: __init__.py  config.default.yaml  exceptions.py  settings.py
ticker_api/ticker_database/: main.py  schema.py
ticker_api/ticker_tape/: main.py
